creating and connecting to a database

--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -1,7 +1,5 @@
 ﻿@page "/"
 
-<h1>Hello, world!</h1>
+<h2>Home Page</h2>
+<p>This is the index.razor, routing name is /</p>
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
