setting default date

--- a/Data/VideoAdd.razor
+++ b/Data/VideoAdd.razor
@@ -13,7 +13,7 @@
         </tr>
         <tr>
             <td>Date Published:</td>
-            <td><input type="text" @bind="video.DatePublished" required /></td>
+            <td><input type="text" @bind="video.DatePublished" required min="1900-01-01" max="2050-01-01"/></td>
         </tr>
         <tr>
             <td>Is Active:</td>
@@ -31,6 +31,14 @@
 @code {
     //create a new, empty video object
     Video video = new Video();
+
+    //Executes on page open,set default on page.
+    protected override void OnInitialized()
+    {
+        DateTime defaultDate = new DateTime(2000, 12, 31);
+        video.DatePublished = defaultDate;
+        video.IsActive = true;
+    }
 
     protected async Task VideoInsert()
     {
